Fixes cards spacing on my courses page. Fixes headers with bg white

--- a/scss/moove/_general.scss
+++ b/scss/moove/_general.scss
@@ -21,6 +21,10 @@ body {
         align-items: center;
         white-space: nowrap;
     }
+
+    .page-header-headings {
+        background-color: initial;
+    }
 }
 
 .moove-container-fluid {
